[package]
name = "einput"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", features = ["persistence"] }
einput_config = { path = "../einput_config" }
einput_core = { path = "../einput_core" }
einput_device = { path = "../einput_device" }
einput_driver_gc = { path = "../einput_driver_gc" }
einput_util = { path = "../einput_util" }
log = "0.4.21"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
simple_logger = "4.3.3"

[target.'cfg(windows)'.dependencies]
einput_output_vigem = { path = "../einput_output_vigem" }
