[package]
name = "einput_device"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
hashbrown = "0.14.3"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
typetag = { version = "0.2.14", optional = true }

[features]
default = ["config", "info"]

std = []

typetag = ["dep:typetag", "std"]

info = []
config = ["typetag"]